data/errors/fingerprint-plugin-cordova-android-11.txt
- Generating browser application bundles (phase: setup)...
✔ Browser application bundle generation complete.
✔ Browser application bundle generation complete.
- Copying assets...
✔ Copying assets complete.
- Generating index html...
✔ Index html generation complete.
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/com/zkmeiling/serialport/fingerprint/FingerprintPlugin.java:5: error: package com.google.gson does not exist
import com.google.gson.Gson;
                      ^
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/com/zkmeiling/serialport/fingerprint/FingerprintPlugin.java:19: error: package android_serialport_api does not exist
import android_serialport_api.SerialPort;
                             ^
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/com/zkmeiling/serialport/fingerprint/FingerprintPlugin.java:30: error: cannot find symbol
    public SerialPort serialPort = null;
           ^
  symbol:   class SerialPort
  location: class FingerprintPlugin
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/com/zkmeiling/serialport/fingerprint/FingerprintPlugin.java:76: error: cannot find symbol
    public SerialPort openFingerprint(String path, int baudrate, CallbackContext callbackContext) {
           ^
  symbol:   class SerialPort
  location: class FingerprintPlugin
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/com/zkmeiling/serialport/fingerprint/FingerprintPlugin.java:78: error: cannot find symbol
            serialPort = new SerialPort(new File(path), baudrate, 0);
                             ^
  symbol:   class SerialPort
  location: class FingerprintPlugin
/Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/app/src/main/java/com/zkmeiling/serialport/fingerprint/FingerprintPlugin.java:173: error: cannot find symbol
            callbackContext.sendPluginResult(new PluginResult(PluginResult.Status.OK, new Gson().toJson(received)));
                                                                                          ^
  symbol:   class Gson
  location: class FingerprintPlugin
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 2s
Command failed with exit code 1: /Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/gradlew cdvBuildDebug -b /Users/damian/Sample Code/plugin-explorer/apps/cordova/platforms/android/build.gradle
[[40mERROR[49m] An error occurred while running subprocess cordova.
        
        cordova build android exited with exit code 1.
        
        Re-running this command with the --verbose flag may provide more information.
